update meta description

--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 .container {
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    padding: 30px;
 }
 
 #mapa {
     border: solid 5px rgb(80, 37, 255);
     border-radius: 10px;
+}
+
+input {
+    margin: 10px;
 }
